# braillify

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cobertura.xml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rule_map.json  tsconfig.json  vitest.config.ts
.changeset/: bumpy-wombats-carry.md  config.json  lucky-rules-fetch.md  strong-turkeys-stare.md
.github/: FUNDING.yml
.github/workflows/: publish-pypi.yml  publish.yml
__tests__/: index.test.ts
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/landing/: .gitignore  devup.json  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/landing/src/: mdx-components.tsx
apps/landing/src/app/: Trans.tsx  TransInput.tsx  globals.css  layout.tsx  page.tsx
apps/landing/src/app/docs/: LeftMenu.tsx  MenuItem.tsx  OpenMenuItem.tsx  RightIndex.tsx  layout.tsx  (+1 more)
apps/landing/src/components/: Code.tsx
apps/landing/src/hooks/: useBoundingClientRect.ts  useIntersectionObserver.ts  useViewportSize.ts
apps/landing/src/types/: index.ts
braillove-case-collector/: README.md  converter.py  input.csv  main.py  output.csv  pyproject.toml
coverage/: clover.xml  coverage-final.json  index.html
coverage/node/: index.html  script.js.html
coverage/node/pkg/: index.html  index.js.html
libs/braillify/: Cargo.toml
libs/braillify/src/: char_shortcut.rs  char_struct.rs  cli.rs  english.rs  korean_char.rs  korean_part.rs  lib.rs  main.rs  math_symbol_shortcut.rs  number.rs  rule.rs  split.rs  symbol_shortcut.rs  unicode.rs  utils.rs  word_shortcut.rs
libs/braillify/src/jauem/: choseong.rs  jongseong.rs
libs/braillify/src/moeum/: jungsong.rs  mod.rs
libs/korea/: Cargo.toml
libs/korea/src/: char_struct.rs  lib.rs  rule.rs  rule_en.rs  symbol_shortcut.rs  unicode.rs  utils.rs  word_shortcut.rs
libs/korea/src/jauem/: mod.rs
py-test/: __init__.py  pyproject.toml
test_case_inputs/: rule_1.csv  rule_10.csv  rule_11.csv  rule_11_b1.csv  rule_12.csv  rule_12_b1.csv  rule_13.csv  rule_14 _b1.csv  rule_14.csv  rule_15.csv  rule_16.csv  rule_17.csv  rule_18.csv  rule_18_b1.csv  rule_1_b1.csv  rule_2.csv  rule_28.csv  rule_29.csv  rule_3.csv  rule_4.csv  rule_41.csv  rule_42.csv  rule_43.csv  rule_43_b1.csv  rule_44.csv  rule_44_b1.csv  rule_45.csv  rule_46.csv  rule_5.csv  rule_6.csv  rule_7.csv  rule_8.csv  rule_9.csv  sentence.csv
test_cases/: rule_1.csv  rule_10.csv  rule_11.csv  rule_11_b1.csv  rule_12.csv  rule_12_b1.csv  rule_13.csv  rule_14 _b1.csv  rule_14.csv  rule_14_b1.csv  rule_15.csv  rule_16.csv  rule_17.csv  rule_18.csv  rule_18_b1.csv  rule_1_b1.csv  rule_2.csv  rule_28.csv  rule_29.csv  rule_3.csv  rule_33.csv  rule_33_b1.csv  rule_34.csv  rule_35.csv  rule_4.csv  rule_40.csv  rule_41.csv  rule_42.csv  rule_43.csv  rule_43_b1.csv  rule_44.csv  rule_44_b1.csv  rule_45.csv  rule_46.csv  rule_47.csv  rule_48.csv  rule_49.csv  rule_5.csv  rule_50.csv  rule_51.csv  (+17 more)
(+25 files in other folders)
