[project]
name = "braillify-test"
version = "0.1.0"
description = ""
authors = [{ name = "owjs3901", email = "owjs3901@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["braillify"]

[tool.uv.sources]
braillify = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3.5"]
