[package]
name = "braillify"
version = "1.0.1"
edition = "2024"
authors = ["JeongMin Oh <owjs39@gmail.com>"]
description = "Rust 기반 크로스플랫폼 한국어 점역 라이브러리"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/braillify"
documentation = "https://braillify.kr"
categories = ["text-processing"]
keywords = ["braillify", "braille", "korean", "translation"]
readme = "../../README.md"
homepage = "https://braillify.kr"

[dependencies]
phf = { version = "0.12", features = ["macros"] }


[dev-dependencies]
csv = "1.3.1"
serde_json = "^1"
proptest = "1.7"
